--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,11 @@ license = 'Apache Software License'
 name = "hlucb"
 readme = "README.md"
 repository = "https://github.com/gregorybchris/hlucb"
-version = "0.1.1"
+version = "0.1.2"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
+numpy = "^1.21.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -36,9 +37,6 @@ pytest-forked = "^1.3.0"
 pytest-xdist = "^2.4.0"
 types-setuptools = "^57.4.2"
 yapf = "^0.31.0"
-
-[tool.poetry.scripts]
-hlucb = "hlucb._cli.main:run"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -53,9 +51,25 @@ disallow_incomplete_defs = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
+plugins = ["numpy.typing.mypy_plugin"]
 
 [tool.pylint.basic]
-good-names = ["e", "f", "h", "i", "j", "k", "m", "n", "w", "x", "y"]
+good-names = [
+  "a",
+  "b",
+  "e",
+  "f",
+  "h",
+  "i",
+  "j",
+  "k",
+  "m",
+  "n",
+  "w",
+  "x",
+  "xs",
+  "y",
+]
 max-locals = 25
 notes = ["FIXME"]
 
