--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ license = 'Apache Software License'
 name = "hlucb"
 readme = "README.md"
 repository = "https://github.com/gregorybchris/hlucb"
-version = "0.1.2"
+version = "0.1.3"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
@@ -54,8 +54,25 @@ ignore_missing_imports = true
 plugins = ["numpy.typing.mypy_plugin"]
 
 [tool.pylint.basic]
-good-names = ["h", "i", "j", "k", "n", "o", "xs"]
+good-names = [
+  "b1",
+  "b2",
+  "d1",
+  "d2",
+  "h",
+  "i",
+  "j",
+  "k",
+  "n",
+  "o",
+  "s",
+  "u",
+  "w",
+  "xs",
+  "T",
+]
 max-locals = 25
+max-args = 7
 notes = ["FIXME"]
 
 [tool.pylint.format]
