--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,27 +16,26 @@ keywords = [
   "pairwise",
   "comparisons",
 ]
-license = 'Apache Software License'
+license = "Apache Software License"
 name = "hlucb"
 readme = "README.md"
 repository = "https://github.com/gregorybchris/hlucb"
-version = "0.1.3"
+version = "0.1.4"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
-numpy = "^1.21.5"
+python = ">=3.8.1"
+numpy = "^1.24.2"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^4.0.1"
-mypy = "^0.910"
-pylint = "^2.12.1"
-pyproject-flake8 = "^0.0.1a2"
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
-pytest-forked = "^1.3.0"
-pytest-xdist = "^2.4.0"
-types-setuptools = "^57.4.2"
-yapf = "^0.31.0"
+flake8 = "^6.0.0"
+mypy = "^1.0.0"
+pylint = "^2.16.1"
+pyproject-flake8 = "^6.0.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-forked = "^1.5.0"
+pytest-xdist = "^3.2.0"
+yapf = "^0.32.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -84,7 +83,6 @@ disable = [
   "unspecified-encoding",          # W1514
   "missing-docstring",             # C0114, C0115, C0116
   "wrong-import-order",            # C0411
-  "no-self-use",                   # R0201
   "duplicate-code",                # R0801
   "too-few-public-methods",        # R0903
 ]
